Fix layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ body {
     /*  Lined-paper css styles borrowed and then adapted from Emily Gagne article, 
         here: https://codepen.io/ceg9498/post/creating-lined-paper */
     background: repeating-linear-gradient(rgb(245, 245, 245), rgb(245, 245, 245) 50px,#74aac9 51px, #74aac9 53px, rgb(245, 245, 245) 54px);
-    /* background: rgb(245, 245, 245); */
+    background: rgb(245, 245, 245);
 }
 
 main {
@@ -79,11 +79,16 @@ nav > a > h4:hover {
 /* image styles */
 
 .recipe-thumb {
-    margin-top: -4px;
-    height: 244px;
-    height: 288px;
     width: auto;
-    padding: 8px;
+    height: 100%;
+    display: flex;
+}
+
+.recipe-img {
+    margin-top: -4px;
+    height: auto;
+    width: 100%;
+    /* padding: 8px; */
     display: flex;
     background-color: rgb(248, 248, 248);
     box-shadow: 0 2px 1px rgba(0,0,0,0.09), 
@@ -93,21 +98,34 @@ nav > a > h4:hover {
                 0 32px 16px rgba(0,0,0,0.09);
 }
 
-.recipe-thumb-view-recipe {
-    height:380px;
-    width:380px;
-}
-
 /* card styles */
+
+.recipe-card-header {   
+    display: flex;
+    width: 100%;
+    /*  Lined-paper css styles borrowed and heavily adapted from Emily Gagne article, 
+        here: https://codepen.io/ceg9498/post/creating-lined-paper */
+    background: linear-gradient(rgb(245, 245, 245),rgb(245, 245, 245) 100px, #faa7e3 101px, #d15da7 102px, #d15da7 104px, rgb(245, 245, 245) 105px, rgb(245, 245, 245) 141px);
+    height: 108px;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.04), 
+                0 4px 2px rgba(0,0,0,0.04), 
+                0 8px 4px rgba(0,0,0,0.04), 
+                0 16px 8px rgba(0,0,0,0.04),
+                0 32px 16px rgba(0,0,0,0.04);
+}
 
 .recipe-card {
     display: flex;
     flex-direction: column;
     height: auto;
     background: transparent;
-    border-left: 1px solid lightpink;
     position: relative;
-    top: 240px;
+    background: repeating-linear-gradient(rgb(245, 245, 245), rgb(245, 245, 245) 50px,#74aac9 51px, #74aac9 53px, rgb(245, 245, 245) 54px);
+    box-shadow: 0 2px 1px rgba(0,0,0,0.04), 
+                0 4px 2px rgba(0,0,0,0.04), 
+                0 8px 4px rgba(0,0,0,0.04), 
+                0 16px 8px rgba(0,0,0,0.04),
+                0 32px 16px rgba(0,0,0,0.04);
 }
 
 .tbc-logo {
@@ -340,8 +358,8 @@ button:hover {
     background: transparent;
 }
 
-.recipe-wrap .row {
-    margin-bottom: 54px;
+.recipe-wrap {
+    margin-bottom: 108px;
 }
 
 .social-links {
@@ -437,11 +455,11 @@ button:hover {
     justify-content: space-between;
 }
 
-.recipe-index, .recipe-results {
+/* .recipe-index, .recipe-results {
     display: grid;
     grid-column-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
-}
+} */
 
 /* Media Queries */
 
@@ -722,11 +740,11 @@ textarea {
 }
 
 .tbc-footer {
-    position: absolute;
+    /* position: absolute; */
     min-width: 100vw;
     padding-top: 46px;
     padding: 0;
-    margin-left: 0;
+    margin: auto auto 80px auto;
     /* margin-top: 20px;
     bottom: -20px; */
     display: flex;
